load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "update-toolchain_lib",
    srcs = ["update.go"],
    importpath = "github.com/seh/rules_cue/tools/cmd/update-toolchain",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "update-toolchain",
    embed = [":update-toolchain_lib"],
    visibility = ["//visibility:public"],
)
